avcodec/libvpxenc: Set min/max quantizer to 0 for lossless mode

Fixes Ticket4246

Reviewed-by: James Zern <jzern@google.com>
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>